welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: not found: value ecriMessage
      ecriMessage(compt)
      ^